--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://post.villalba.is.eu.org"
+baseURL = "http://post.villalba.is.eu.org/"
 title = "post.villalba.is.eu.org"
 languageCode = "en"
 defaultContentLanguage = "es"
