--- a/data/pdfs.yml
+++ b/data/pdfs.yml
@@ -1,2 +1,2 @@
-- url: "https://que-cives-at-eu-org.ipns.dweb.link/2-%20SIME%20N%C2%BA%2045.383%20-%202024%20%20-%20PROV.%20SG.%20VAF.%20ME.%20N%C2%BA%20334%20-%202024%20RD.pdf"
-  caption: "Documento 1"
+- url: "https://finexpar.villalba.is.eu.org/3780521.pdf"
+  caption: "Urgimiento"
