--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete old workflow runs
-        uses: jlumbroso/delete-workflow-runs@v2.0.0
+        uses: github-actions/delete-workflow-runs@v3
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           retain_days: 7         # conserva solo los últimos 7 días
           keep_minimum_runs: 10  # siempre deja al menos 10 runs
